--- a/new-era-solar-client/src/index.css
+++ b/new-era-solar-client/src/index.css
@@ -58,7 +58,7 @@ body::-webkit-scrollbar {
 }
 
 
-.css-4t3x6l-MuiPaper-root-MuiDrawer-paper {
+.css-wf16b5 {
     width: 40% !important;
     background-color: #365194 !important;
 }
