--- a/new-era-solar-client/src/index.css
+++ b/new-era-solar-client/src/index.css
@@ -58,6 +58,11 @@ body::-webkit-scrollbar {
 }
 
 
+.css-4t3x6l-MuiPaper-root-MuiDrawer-paper {
+    width: 40% !important;
+    background-color: #365194 !important;
+}
+
 .css-wf16b5 {
     width: 40% !important;
     background-color: #365194 !important;
