--- a/new-era-solar-client/src/sections/Hero/banner.css
+++ b/new-era-solar-client/src/sections/Hero/banner.css
@@ -21,6 +21,11 @@
 
 }
 
+.css-uhb5lp {
+    max-width: 1000px !important;
+    height: auto !important;
+}
+
 @media only screen and (max-width: 1500px) {}
 
 @media only screen and (max-width: 1200px) {}
