--- a/new-era-solar-client/src/sections/Hero/banner.css
+++ b/new-era-solar-client/src/sections/Hero/banner.css
@@ -34,7 +34,30 @@
 }
 
 @media only screen and (max-width: 600px) {
+
+
     .ban-content {
         top: 25%;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .video-solar {
+        display: none;
+    }
+
+    .alternate-background {
+        display: flex;
+        background-color: #699aa4;
+        background-image: url('../../../public/assets/alternate.png');
+        background-position: bottom;
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
+        height: 80vh;
+        min-height: 700px;
+
+        position: relative;
+
     }
 }
