--- a/new-era-solar-client/src/sections/Hero/banner.css
+++ b/new-era-solar-client/src/sections/Hero/banner.css
@@ -15,6 +15,14 @@
 
 }
 
+.header-text-one {
+    font-size: 100px !important;
+}
+
+.header-text-two {
+    font-size: 2.1rem !important;
+}
+
 .ban-content {
     position: absolute;
     top: 35%;
@@ -42,6 +50,15 @@
 }
 
 @media only screen and (max-width: 500px) {
+
+    .header-text-one {
+        font-size: 50px !important;
+    }
+
+    .header-text-two {
+        font-size: 1.5rem !important;
+    }
+
     .video-solar {
         display: none;
     }
