--- a/new-era-solar-client/src/sections/get-a-quote.css
+++ b/new-era-solar-client/src/sections/get-a-quote.css
@@ -50,6 +50,13 @@
 
 
 @media only screen and (max-width: 600px) {
+    #get-a-quote-section::before {
+        content: '';
+        background-image: url('../../public/assets/get-a-quote.jpg');
+        background-size: cover;
+        position: absolute;
+    }
+
     .quote-button {
         font-size: 25px;
         width: 200px;
