--- a/new-era-solar-client/src/sections/get-a-quote.css
+++ b/new-era-solar-client/src/sections/get-a-quote.css
@@ -48,13 +48,19 @@
     outline: 0;
 }
 
+@media only screen and (max-width: 850px) {
+    .quote-button {
+        font-size: 25px;
+        width: 200px;
+    }
+}
 
 @media only screen and (max-width: 600px) {
     #get-a-quote-section::before {
         content: '';
         background-image: url('../../public/assets/get-a-quote.jpg');
         background-size: cover;
-        position: absolute;
+
     }
 
     .quote-button {
