--- a/new-era-solar-client/src/sections/get-a-quote.css
+++ b/new-era-solar-client/src/sections/get-a-quote.css
@@ -53,15 +53,15 @@
         font-size: 25px;
         width: 200px;
     }
+
+    #get-a-quote-section::before {
+        background-attachment: inherit;
+
+    }
+
 }
 
 @media only screen and (max-width: 600px) {
-    #get-a-quote-section::before {
-        content: '';
-        background-image: url('../../public/assets/get-a-quote.jpg');
-        background-size: cover;
-
-    }
 
     .quote-button {
         font-size: 25px;
